--- a/InternetConnection/res/layout/activity_main.xml
+++ b/InternetConnection/res/layout/activity_main.xml
@@ -7,18 +7,23 @@
     tools:context="com.naiaraodiaga.internetconnection.MainActivity"
     tools:ignore="MergeRootFrame" >
 
-    <GridLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1" >
+        android:layout_gravity="bottom" >
 
-    </GridLayout>
+        <Button
+            android:id="@+id/downloadButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/download" />
 
-    <Button
-        android:id="@+id/downloadButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="@string/download" />
+        <Button
+            android:id="@+id/downloadZipButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/downloadZip" />
+
+    </LinearLayout>
 
 </LinearLayout>
