--- a/Preferences/res/xml/userpreferences.xml
+++ b/Preferences/res/xml/userpreferences.xml
@@ -4,21 +4,21 @@
     <PreferenceCategory android:title="@string/REFRESH_INTERVAL" >
         <SwitchPreference
             android:defaultValue="true"
-            android:key="@string/PREF_SWITCH"
+            android:key="@string/AUTOREFRESH_KEY"
             android:summary="@string/autorefresh_pref"
             android:title="@string/autorefresh_title" />
 
         <ListPreference
             android:entries="@array/intervalArray"
             android:entryValues="@array/intervalArrayValues"
-            android:key="@string/PREF_INTERVAL"
+            android:key="@string/INTERVAL_KEY"
             android:title="@string/interval_title" />
     </PreferenceCategory>
     <PreferenceCategory android:title="@string/EARTHQUAKE" >
         <ListPreference
             android:entries="@array/earthquakeArray"
             android:entryValues="@array/earthquakeArrayValues"
-            android:key="@string/PREF_MAG"
+            android:key="@string/MAG_KEY"
             android:title="@string/magnitude_title" />
     </PreferenceCategory>
     
