--- a/EarthQuake/res/menu/main.xml
+++ b/EarthQuake/res/menu/main.xml
@@ -3,7 +3,7 @@
     tools:context="com.naiaraodiaga.earthquake.MainActivity" >
 
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/ListLayout"
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/action_settings"/>
