--- a/EarthQuake/res/layout/list_row_fragment.xml
+++ b/EarthQuake/res/layout/list_row_fragment.xml
@@ -9,30 +9,33 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:background="#cccccc" >
+        android:layout_alignParentRight="true" >
 
         <TextView
             android:id="@+id/magnitude"
             android:layout_width="50dip"
             android:layout_height="50dip"
-            android:gravity="center_vertical|center_horizontal"
+            android:background="#5ac0cf"
+            android:gravity="center_vertical"
             android:text="Mag"
-            android:textSize="20dip"
+            android:textSize="20sp"
             android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical" >
+            android:background="#f1fffe"
+            android:orientation="vertical"
+            android:paddingLeft="5dp" >
 
             <TextView
                 android:id="@+id/place"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
                 android:text="Place"
                 android:textColor="#040404"
-                android:textSize="15dip"
+                android:textSize="15sp"
                 android:textStyle="bold"
                 android:typeface="sans" />
             
@@ -43,9 +46,7 @@
                 android:layout_marginTop="5dip"
                 android:text="Time"
                 android:textColor="#343434"
-                android:textSize="10dip" />
-
-            
+                android:textSize="10sp" />
 
         </LinearLayout>
     </LinearLayout>
