--- a/EarthQuakeContentProvider/res/menu/main.xml
+++ b/EarthQuakeContentProvider/res/menu/main.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.naiaraodiaga.earthquake.MainActivity" >
+    tools:context="com.naiaraodiaga.earthquakecontentprovider.MainActivity" >
 
     <item
         android:id="@+id/ListLayout"
