--- a/EarthQuakeContentProvider/res/values/arrays.xml
+++ b/EarthQuakeContentProvider/res/values/arrays.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="intervalArray">
+        <item >1 min</item>
         <item >5 min</item>
         <item >15 min</item>
         <item >30 min</item>
     </string-array>
     
     <string-array name="intervalArrayValues">
-        <item >0</item>
         <item >1</item>
-        <item >2</item>
+        <item >5</item>
+        <item >15</item>
+        <item >30</item>
     </string-array>
     
     <string-array name="earthquakeArray">
